add seamless prop to <Form>

--- a/packages/anthill/src/Form.module.css
+++ b/packages/anthill/src/Form.module.css
@@ -3,3 +3,9 @@
   grid-auto-columns: minmax(0, auto);
   grid-auto-rows: minmax(0, max-content);
 }
+
+.seamless {
+  align-items: center;
+  display: flex;
+  gap: var(--context-spacing);
+}
