--- a/packages/anthill/src/Form.module.css
+++ b/packages/anthill/src/Form.module.css
@@ -2,10 +2,12 @@
   display: grid;
   grid-auto-columns: minmax(0, auto);
   grid-auto-rows: minmax(0, max-content);
-}
 
-.seamless {
-  align-items: center;
-  display: flex;
-  gap: var(--context-spacing);
+  &.inline {
+    align-items: center;
+    gap: var(--context-spacing);
+    grid-auto-columns: minmax(0, max-content);
+    grid-auto-flow: column;
+    grid-template-columns: auto;
+  }
 }
