add padded prop to <Link>

--- a/packages/anthill/src/Action.module.css
+++ b/packages/anthill/src/Action.module.css
@@ -14,7 +14,7 @@
   vertical-align: bottom;
 
   &.padded {
-    padding: 0.5rlh 2ch;
+    padding: 0.5lh;
   }
 
   @media screen and (hover: hover) {
